--- a/.github/workflows/deadman_boom.yml
+++ b/.github/workflows/deadman_boom.yml
@@ -1,10 +1,18 @@
 name: Deadman boom (publish if alive.txt is 2+ days old)
 
 on:
+  # 1) Runs daily (backup, just in case)
   schedule:
-    # Runs daily (UTC time)
     - cron: "20 1 * * *"
+
+  # 2) Allows you to run it manually from the Actions tab
   workflow_dispatch:
+
+  # 3) ✅ NEW: runs automatically whenever alive.txt is changed
+  push:
+    branches: ["main"]
+    paths:
+      - "alive.txt"
 
 permissions:
   contents: write
